      + =config.exs= 파일에 =config :slab, merge_request_filename_descriptor:= 설정
    - prometheus, grafana로 지표(metrics)를 확인할 수 있다
      + =script/server-with-metrics= 스크립트로 실행
      + [[http://localhost:3000]] 사이트 방문
    - slack input 지표를 grafana에서 볼 수 있게 추가
    - gitlab request 지표를 grafana에서 볼 수 있게 추가
    - merge request 주소에 /- 경로가 들어가도 preview를 보여준다

** [[https://github.com/ohyecloudy/slab/compare/v1.0.7...v1.0.8][v1.0.8]]

*** :star: Added

    - =due-date= 명령어 응답시 검사 대상 마일스톤을 표시한다

*** :gear: Changed

    - =due-date= 명령어 결과를 각 멤버에게 DM으로 전송한다

*** :bug: Fixed

    - =due-date= 명령 실행시 닫힌 이슈를 검색하는 버그 고침

** [[https://github.com/ohyecloudy/slab/compare/v1.0.6...v1.0.7][v1.0.7]]

*** :star: Added

    - [[https://sentry.io/][sentry]] 에러 리포팅 소프트웨어 통합
    - =due-date= 명령어로 due date 이슈를 출력한다.
      - 출력 항목은 due date가 지난 이슈, 오늘이 due date인 이슈, due date가 일주일 내인 이슈, 시작한 마일스톤인데 due date를 설정 안 한 이슈이다.

** [[https://github.com/ohyecloudy/slab/compare/v1.0.5...v1.0.6][v1.0.6]]

*** :star: Added

    - pipeline 출력을 간단하게 한다
    - issue 출력을 간단하게 하고 closed 상태를 표시한다
    - merge request url을 입력하면 merge request 정보와 관련 issue 정보를 출력한다

** [[https://github.com/ohyecloudy/slab/compare/v1.0.4...v1.0.5][v1.0.5]]

*** :star: Added
    - masters 설정을 비워 높으면 모든 유저가 master 권한을 가진다

** [[https://github.com/ohyecloudy/slab/compare/v1.0.3...v1.0.4][v1.0.4]]

*** :star: Added

    - 다른 봇이 입력한 메시지에도 반응한다

** [[https://github.com/ohyecloudy/slab/compare/v1.0.2...v1.0.3][v1.0.3]]

*** :star: Added

    - =--date= 옵션에 오늘을 기준으로 한 delta days 입력이 가능하다. =--date -1= 옵션은 어제와 같다.
      - commits-without-mr, self-merge 명령어에 적용

*** :bug: Fixed

    - 파이프라인이 연속으로 100번 이상 실패해도 상태를 제대로 가져올 수 있다

** [[https://github.com/ohyecloudy/slab/compare/v1.0.1...v1.0.2][v1.0.2]]

*** :star: Added

    - docker로 서버를 실행할 때, timezone을 설정할 수 있다.

*** :bug: Fixed

    - 빌드에 필요한 rebar를 설치해 docker-server 명령이 실패하는 결함 제거

** [[https://github.com/ohyecloudy/slab/compare/v1.0.0...v1.0.1][v1.0.1]]

*** :star: Added
